# ranchero

./: .gitignore  Cargo.toml  README.md
crates/zwift-api/: Cargo.toml
crates/zwift-api/src/: lib.rs
crates/zwift-api/tests/: auth.rs
crates/zwift-proto/: Cargo.toml  build.rs
crates/zwift-proto/proto/: udp-node-msgs.proto
crates/zwift-proto/src/: lib.rs
crates/zwift-proto/tests/: roundtrip.rs  server_to_client.rs
crates/zwift-relay/: Cargo.toml
crates/zwift-relay/src/: capture.rs  consts.rs  crypto.rs  frame.rs  header.rs  iv.rs  lib.rs  session.rs  tcp.rs  udp.rs  world_timer.rs
crates/zwift-relay/tests/: capture.rs  crypto.rs  frame.rs  header.rs  iv.rs  session.rs  tcp.rs  time_sync.rs  udp.rs  world_timer.rs
crates/zwift-relay/tests/fixtures/: README.md  gen_vectors.mjs
docs/: ARCHITECTURE-AND-RUST-SPEC.md
docs/plans/: README.md  STEP-01-cli-base.md  STEP-02-configuration.md  STEP-02.2-vi-navigation.md  STEP-04-logging.md  STEP-06-proto-crate.md  STEP-07-auth-and-rest.md  STEP-08-relay-codec.md  STEP-09-relay-session.md  STEP-10-udp-channel.md  STEP-11-tcp-channel.md  STEP-11.5-wire-capture.md  STEP-12-game-monitor.md  STEP-12.1-tcp-end-to-end-smoke.md  STEP-12.10-yet-more-failures.md  STEP-12.12-log-shit-properly.md  STEP-12.13-still-screwing-up-after-all-these-years.md  STEP-12.14-yet-another-detailed-review.md  STEP-12.2-follow-command.md  STEP-12.5-still-not-doing-the-job-as-specified.md  STEP-12.6-really-basic-implementation-details-that-were-screwed-up-anyway.md  STEP-12.9-confirm-path-before-background.md  STEP-13-rolling-stats.md  STEP-14-athlete-data.md  STEP-15-groups-segments.md  STEP-16-persistence.md  STEP-17-web-server.md  STEP-18-format-payloads.md  STEP-19-compatibility-tests.md  STEP-20-additional-considerations.md  mark-slow-tests.md
docs/plans/done/: STEP-01-cli-base.md  STEP-02-configuration.md  STEP-02.1-configuration-keybindings.md  STEP-02.2-vi-navigation.md  STEP-03-daemon-lifecycle.md  STEP-04-logging.md  STEP-05-credentials.md  STEP-06-proto-crate.md  STEP-07-auth-and-rest.md  STEP-08-relay-codec.md  STEP-09-relay-session.md  STEP-10-udp-channel.md  STEP-11-tcp-channel.md  STEP-11.5-wire-capture.md  STEP-11.6-capture-consistency-review.md  STEP-12.10-yet-more-failures.md  STEP-12.11-still-screwing-it-up-obviously-cant-read.md  STEP-12.13-still-screwing-up-after-all-these-years.md  STEP-12.5-still-not-doing-the-job-as-specified.md  STEP-12.8-startup-validation.md
src/: cli.rs  lib.rs  main.rs
src/config/: atomic_write.rs  editrc.rs  mod.rs  paths.rs  store.rs
src/credentials/: mod.rs
src/daemon/: control.rs  mod.rs  pidfile.rs  probe.rs  relay.rs  runtime.rs  validate.rs
src/logging/: mod.rs
src/tui/: backend.rs  driver.rs  keyring.rs  mod.rs  model.rs  view.rs
tests/: auth_check.rs  cli_args.rs  config.rs  config_keyring.rs  course_gate.rs  credentials.rs  daemon_lifecycle.rs  debug_filter.rs  follow.rs  full_scope.rs  logging.rs  logging_config.rs  relay_conn_id.rs  relay_runtime.rs  tui.rs
