[package]
name = "ranchero"
version = "0.1.0"
edition = "2024"

[lib]
name = "ranchero"
path = "src/lib.rs"

[[bin]]
name = "ranchero"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
ratatui = "0.30"
crossterm = "0.29"
edtui = { version = "0.11", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time", "io-util", "sync"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }

[dev-dependencies]
tempfile = "3"
