[workspace]
members = ["crates/*"]
default-members = [".", "crates/*"]

[package]
name = "ranchero"
version = "0.1.0"
edition = "2024"

[lib]
name = "ranchero"
path = "src/lib.rs"

[[bin]]
name = "ranchero"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
toml = "0.8"
directories = "5"
ratatui = "0.30"
crossterm = "0.29"
edtui = { version = "0.11", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
thiserror = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
prost = "0.13"
zwift-api = { path = "crates/zwift-api" }
zwift-proto = { path = "crates/zwift-proto" }
zwift-relay = { path = "crates/zwift-relay" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time", "io-util", "sync", "test-util"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
