[package]
name = "zwift-api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Zwift OAuth2 (Keycloak password-grant) + REST client (port of sauce4zwift's ZwiftAPI)."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "rt-multi-thread", "test-util"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
wiremock = "0.6"
